# tenant

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  RELEASE_NOTES.md  justfile
.github/workflows/: release.yml
src/: accounts.rs  adapters.rs  allocation.rs  ansi.rs  cli.rs  commands.rs  doctor.rs  domain.rs  executor.rs  firewall.rs  ids.rs  lib.rs  main.rs  messages.rs  profile.rs  reporter.rs  terminal.rs
src/adapters/: dry_run_executor.rs  dry_run_host_machine.rs  macos.rs  stub_executor.rs  stub_host_accounts.rs  stub_host_machine.rs  stub_reader.rs  stub_user_directory.rs
src/adapters/macos/: executor.rs  host_accounts.rs  host_machine.rs  reader.rs  user_directory.rs
src/domain/: accounts.rs  commands.rs  errors.rs  executor.rs  host_accounts.rs  host_machine.rs  host_user_directory.rs  ids.rs  ops.rs  reader.rs  reporter.rs  tenants.rs
src/domain/accounts/: create.rs  destroy.rs  doctor.rs  reapply.rs  shares.rs  shell.rs  validation.rs
src/domain/tenants/: create.rs  destroy.rs  doctor.rs  reapply.rs  setup.rs  shares.rs  shell.rs  (+1 more)
tests/: ansi.rs  cli.rs  cli_create.rs  cli_destroy.rs  cli_doctor.rs  cli_help.rs  cli_inbound.rs  cli_mode.rs  cli_reload.rs  cli_setup.rs  cli_shell.rs  doctor.rs  env_policy_parse.rs  firewall_conf.rs  firewall_render.rs  host_acl_parse.rs  intent_labels.rs  macos_executor.rs  macos_host_accounts.rs  macos_host_machine.rs  macos_reader.rs  macos_user_directory.rs  pam_parse.rs  pf_rule_parse.rs  profile_parse.rs
tests/adapters/: mod.rs  never_host_machine.rs
tests/common/: mod.rs
(+3 files in other folders)
